<resources>
    <string name="app_name">MixMax  </string>
    <string name="calculate">Calculate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="done">Done</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="artist">Artist</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>
    <string name="songs">Songs</string>

    <string name="alhan_channel">Alhan Channel</string>
    <string name="alhan_description">Alhan description</string>
    <string name="title_activity_map">Map</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="contacts">Contacts</string>
    <string name="home">Home</string>


</resources>
